Change history for HTML-Parser

{{$NEXT}}
  * Cleanup the prereqs a bit
  * Mark HTML::Filter as deprecated as the docs point out

3.74      2020-08-30
  * Fix the order of date and version in this change log. (Thanks, haarg)
  * Convert to Dist::Zilla
  * Build all prereqs from our cpanfile
  * Go through all test files and:
    * perltidy
    * Use strict/warnings
    * Get rid of two-arg open
    * Get rid of BAREWORD filehandles
    * Fix the eval pattern used
    * Only use -w where we catch $SIG{__WARN__}
    * Fix encoding problems
    * use utf8 where we have unicode in the source
  * Fix a typo here and there
  * perltidy all of the example apps in eg/
  * Add comments explaining the apps in eg/ (GH#13 Thanks, Salvatore Bonaccorso)
  * Print out UTF-8 encoded data where sensible in eg/

3.73     2020-08-24
  * Cleaned up this changes log.
  * Added a .mailmap file to organize contributions accurately.
  * Ensure all versions are equal and on the current version
  * Add the .mailmap to the MANIFEST
  * Change the META information to point to the new GH repository
  * Add a .perltidyrc to use going forward
  * Add hctype.h and pfunc.h to the dist as static files and stop asking
    for them to be built on the user's end.
  * Remove t/pod.t from userland testing
  * Remove t/pod-coverage.t from userland testing
  * Clean up the MANIFEST
  * Start testing via GitHub Actions/Workflows
  * Protect active parser from being freed (PR 13, RT #115034)

3.72     2016-01-19
  * Avoid more clang casting warnings
  * Remove trailing whitespace
  * Ensure entities expand to utf8 sequences under 'utf8_mode' [RT#99755]
  * typo fixes (David Steinbrunner)
  * Silence clang warning (Jacques Germishuys)
  * const+static-ing (bulk88)

3.71     2013-05-09
  * Transform ':' in headers to '-' [RT#80524]

3.70     2013-03-28
  * Fix for cross-compiling with Buildroot (François Perrad)
  * Comment typo fix
  * Fix Issue #3 / RT #84144: HTML::Entities::decode_entities() needs