@@ -7,7 +7,7 @@ copyright_year   = 1996
 
 [ReadmeAnyFromPod / Markdown_Readme]
 type = gfm
-source_filename = Parser.pm
+source_filename = lib/HTML/Parser.pm
 filename = README.md
 location = root
 
@@ -54,7 +54,7 @@ badges = github_actions/windows
 [Test::Kwalitee]
 skiptest = no_symlinks
 [Test::Version]
-filename_match = qr/^Parser\.pm$/
+filename_match = qr/Parser\.pm$/
 [Test::Pod::Coverage::Configurable]
 trustme = HTML::Entities => qr/^(?:UNICODE_SUPPORT|decode|encode|encode_numeric|encode_numerically|num_entity)$/
 trustme = HTML::Filter => qr/^(?:output)$/
@@ -73,3 +73,10 @@ stopword = undecoded
 stopword = IMG
 stopword = textified
 stopword = Textification
+stopword = argspecs
+stopword = Attr
+stopword = Attrseq
+stopword = Dtext
+stopword = Tokenpos
+stopword = Unterminated
+stopword = CDATA
